--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.js"></script>
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="sketch.js"></script>
-        <title>Audio Processing</title>
+        <title>Audio-Processing</title>
     </head>
     <body>
        <h1>Audio Processing</h1> 
